--- a/design/main.css
+++ b/design/main.css
@@ -1,1 +1,119 @@
+body{
+	background-color: rgb(246, 241, 239);
+	font-family: 'Playfair Display', serif;
+}
+nav{
+	box-shadow: 0px 2px 10px rgb(148, 116, 129);
+	background-color: rgb(246, 241, 239);
+	margin: auto;
+	width: 100%;
+	background-image: url("../images/gradient1.jpeg");
+}
+cite h1{
+	color: rgb(148, 116, 129);
+	font-family: 'Dancing Script', cursive;
+	font-size: 35px;
+	width: 50%;
+	margin: 20px auto;
+	text-align: center;
+	margin-top: 70px;
+}
+a{
+	color: rgb(148, 116, 129) !important;
+	font-size: 20px;
+	margin-right: 30px;
+}
+form{
+	padding: 0;
+	margin-top: 50px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	color: rgb(148, 116, 129);
+	font-family: 'Playfair Display', serif;
+}
+input, select{
+	display: block;
+	width: 200px;
+	margin: 0;
+	padding: 0;
+	padding-left: 10px;
+	border: 1.5px solid rgb(148, 116, 129);
+	border-radius: 7px;
+	height: 35px;
+	opacity: 0.7;
+}
+option{
+	border: 1.5px solid rgb(148, 116, 129);
+	border-radius: 7px;
+	background-color: rgb(246, 241, 239) !important;
+	color: rgb(148, 116, 129);
+}
+#generate{
+	width: fit-content;
+	text-align: center;
+	font-family: 'Playfair Display', serif;
+	font-size: 20px;
+	background-color: rgb(246, 241, 239);
+	color: rgb(148, 116, 129);
+	border: 1.5px solid rgb(148, 116, 129);
+	border-radius: 8px;
+	margin: 20px auto;
+	padding: 5px 10px;
 
+}
+.text h6{
+	color: rgb(148, 116, 129);
+	background-color: rgb(246, 241, 239);
+	margin: 0;
+}
+#about{
+	margin-right: 0px;
+}
+.navbar-brand{
+	color: rgb(58, 44, 50) !important;
+}
+.text{
+	width: 15%;
+	margin: auto;
+	padding: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+.text p{
+	display: block; 
+	text-align: right;
+}
+.container{ 
+	margin: 0; 
+	width: 100%;
+}
+.dropdown-menu{
+	background-color: rgb(246, 241, 239);
+	margin: 0;
+}
+.navbar-brand{
+	font-family: 'Dancing Script', cursive;
+	font-size: 30px;
+}
+.fa-pencil{
+	transform: rotate(-20deg);
+	font-size: 20px;
+	padding: 0;
+	margin: 0;
+	word-spacing: 0px;
+}
+.fa-bars{
+	color: rgb(148, 116, 129);
+	float: right;
+}
+@media screen and (max-width: 500px){
+	.text{
+		width: fit-content;
+	}
+	.text p{
+		font-size: 14px;
+		float: right;
+	}
+}
